[gd_scene load_steps=5 format=3 uid="uid://dcbh0msfwickm"]

[ext_resource type="Script" path="res://objects/activity_start_area.gd" id="1_jd2ht"]

[sub_resource type="Gradient" id="Gradient_pwdp8"]
offsets = PackedFloat32Array(0, 0.214286, 1)
colors = PackedColorArray(0.376471, 0.333333, 0.388235, 1, 0.376471, 0.333333, 0.388235, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4081q"]
gradient = SubResource("Gradient_pwdp8")
width = 110

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqajw"]
size = Vector2(127, 162)

[node name="ExitDoorFadeGradient" type="Sprite2D"]
z_index = 100
texture = SubResource("GradientTexture1D_4081q")
region_enabled = true
region_rect = Rect2(0, -97, 110, 162)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("1_jd2ht")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8.5, 0)
shape = SubResource("RectangleShape2D_fqajw")

[node name="HotkeyPopupPanel" type="PanelContainer" parent="Area2D"]
visible = false
offset_left = -34.0
offset_top = -51.0
offset_right = 3.0
offset_bottom = -13.0

[node name="MarginContainer" type="MarginContainer" parent="Area2D/HotkeyPopupPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="Area2D/HotkeyPopupPanel/MarginContainer"]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "E"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
